[gd_scene load_steps=4 format=3 uid="uid://cb8eeiiy6kn24"]

[ext_resource type="Script" path="res://competence/script/menu_lvl.gd" id="1_ji87f"]
[ext_resource type="Shader" path="res://Shader/menu_lvl.gdshader" id="1_trs75"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7d8ip"]
shader = ExtResource("1_trs75")
shader_parameter/amount = 0.641

[node name="MenuLVL" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ji87f")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_7d8ip")
layout_mode = 0
offset_right = 1265.0
offset_bottom = 699.0

[node name="PanelContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 220.0
offset_top = 99.0
offset_right = 940.0
offset_bottom = 562.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="comp1" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "COMPETENCE"
autowrap_mode = 2

[node name="nom" type="Label" parent="PanelContainer/VBoxContainer/comp1"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 173.0
offset_bottom = 38.0
text = "NAME"
horizontal_alignment = 1

[node name="comp2" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "COMPETENCE "
autowrap_mode = 2

[node name="nom" type="Label" parent="PanelContainer/VBoxContainer/comp2"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 173.0
offset_bottom = 38.0
text = "NAME"
horizontal_alignment = 1

[node name="comp3" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "COMPETENCE "
autowrap_mode = 2

[node name="nom" type="Label" parent="PanelContainer/VBoxContainer/comp3"]
layout_mode = 0
offset_left = 13.0
offset_top = 15.0
offset_right = 173.0
offset_bottom = 38.0
text = "NAME"
horizontal_alignment = 1

[connection signal="pressed" from="PanelContainer/VBoxContainer/comp1" to="." method="_on_comp_1_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/comp2" to="." method="_on_comp_2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/comp3" to="." method="_on_comp_3_pressed"]
